# user-z0kl6u-chipflow-design-1759745551117

./: Makefile  README.md  chipflow.toml  design.json  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh  update-content.sh
design/: design.py
design/software/: main.c
tools/: check_project.py  json_compare.py
