
# Project metadata

[project]
name = "gf130-design"
version = "0.0.0"
description = ""
authors = [
  {name = "Robert Taylor", email = "rob.taylor@chipflow.io" },
]
license = "LicenseRef-Proprietary"

requires-python = ">=3.11"
dependencies = [
    "amaranth[builtin-yosys]>=0.5.4,<0.6",
    "chipflow-digital-ip @ git+https://github.com/ChipFlow/chipflow-digital-ip",
    "chipflow-lib @ git+https://github.com/ChipFlow/chipflow-lib.git@more-sim",
    "ziglang==0.11.0",
    "amaranth-soc @ git+https://github.com/amaranth-lang/amaranth-soc",
]

# Build system configuration

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.resolution]
allow-prereleases = true

# Development workflow configuration

[tool.pyright]
diagnosticMode=false
typeCheckingMode = "off"
reportInvalidTypeForm = false
reportAttributeAccessIssue = false
reportGeneralTypeIssues = false
reportWildcardImportFromLibrary = false
reportMissingImports = "none"

[tool.ruff]
include = ["pyproject.toml", "**/*.py", "chipflow.toml"]

[tool.ruff.lint]
ignore = ['F403', 'F405', 'E701', 'F841']

[tool.pdm.version]
source = "scm"

[tool.pdm.scripts]
_.env_file = ".env.toolchain"
_json-compare.call = "tools.json_compare:main"
_check-project.call = "tools.check_project:main"
_run-sim.shell = "cd $PDM_RUN_CWD/build/sim && ./sim_soc"
submit.composite = ["_check-project", "chipflow silicon submit {args}"]
chipflow.shell = "cd $PDM_RUN_CWD && chipflow"
sim-run.composite = [
    "_check-project",
    "chipflow sim",
    "chipflow software",
    "_run-sim {args}"
    ]
sim-check.composite = [
    "_check-project",
    "sim-run {args}",
    "_json-compare design/tests/events_reference.json build/sim/events.json"
    ]
board-load-software-ulx3s.composite = ["_check_project", "openFPGALoader -fb ulx3s -o 0x00100000 $PDM_RUN_CWD/build/software/software.bin"]
board-load-ulx3s.composite = ["_check_project", "openFPGALoader -b ulx3s $PDM_RUN_CWD/build/top.bit"]
test.cmd = "pytest"
test-cov.cmd = "pytest --cov=my_design --cov-report=term"
test-cov-html.cmd = "pytest --cov=my_design --cov-report=html"
# test-docs.cmd = "sphinx-build -b doctest docs/ docs/_build"
lint.composite = [ "ruff check {args}", "pyright chipflow_lib"]
# docs.cmd = "sphinx-build docs/ docs/_build/ -W --keep-going"



[dependency-groups]
dev = [
    "ruff>=0.9.2",
    "pytest>=7.2.0",
    "pytest-cov>=0.6",
    "pyright>=1.1.405",
]
